--- a/index.html
+++ b/index.html
@@ -6,6 +6,25 @@
         <link rel="stylesheet" href="./style.css">
     </head>
     <body>
-        
+        <div class="header">
+            <div class="nav">
+                <div class="logo">Header Logo</div>
+                <ul class="links">
+                    <li><a href="">header link one</a></li>
+                    <li><a href="">header link one</a></li>
+                    <li><a href="">header link one</a></li>
+                </ul>
+            </div>
+            <div class="banner">
+                <div class="left">
+                    <div class="banner-heading">This website is awesome</div>
+                    <div class="banner-text">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
+                    <button class="banner-btn">Sign up</button>
+                </div>
+                <div class="right">
+                    <div class="img-holder">this is a placeholder for an image</div>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
