--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
             </div>
         </div>
 
+        <!-- Footer -->
         <div class="footer-container">
             <div class="footer">
                 <div>Copyright</div>
