--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
         <link rel="stylesheet" href="./style.css">
     </head>
     <body>
+        <!-- Header -->
         <div class="header">
             <div class="nav">
                 <div class="logo">Header Logo</div>
                 <ul class="links">
                     <li><a href="">header link one</a></li>
-                    <li><a href="">header link one</a></li>
-                    <li><a href="">header link one</a></li>
+                    <li><a href="">header link two</a></li>
+                    <li><a href="">header link three</a></li>
                 </ul>
             </div>
             <div class="banner">
