--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <title>Landing Page</title>
         <link rel="stylesheet" href="./style.css">
+        <script src="https://kit.fontawesome.com/228c92da45.js" crossorigin="anonymous"></script>
     </head>
     <body>
         <!-- Header -->
@@ -69,6 +70,14 @@
                     <div class="cta-subheading">Sign up for our product by clicking that button right over there!</div>
                 </div>
                 <button class="cta-btn">Sign up</button>
+            </div>
+        </div>
+
+        <div class="footer-container">
+            <div class="footer">
+                <div>Copyright</div>
+                <div><i class="fa-regular fa-copyright"></i></div>
+                <div>Hafsa Shaikh 2024</div>
             </div>
         </div>
     </body>
