--- a/index.html
+++ b/index.html
@@ -27,5 +27,30 @@
                 </div>
             </div>
         </div>
+
+        <!-- Information -->
+        <div class="info-container">
+            <div class="info">
+                <div class="info-header">Some random information.</div>
+                <div class="card-container">
+                    <div class="card">
+                        <div class="card-img"></div>
+                        <div class="card-subtext">this is some subtext under an illustration or image</div>
+                    </div>
+                    <div class="card">
+                        <div class="card-img"></div>
+                        <div class="card-subtext">this is some subtext under an illustration or image</div>
+                    </div>
+                    <div class="card">
+                        <div class="card-img"></div>
+                        <div class="card-subtext">this is some subtext under an illustration or image</div>
+                    </div>
+                    <div class="card">
+                        <div class="card-img"></div>
+                        <div class="card-subtext">this is some subtext under an illustration or image</div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
