--- a/index.html
+++ b/index.html
@@ -60,5 +60,16 @@
                 <div class="author">-Thor, God of Thunder</div>
             </div>
         </div>
+
+        <!-- Call to action -->
+        <div class="cta-container">
+            <div class="cta">
+                <div class="left">
+                    <div class="cta-heading">Call to action! It's time!</div>
+                    <div class="cta-subheading">Sign up for our product by clicking that button right over there!</div>
+                </div>
+                <button class="cta-btn">Sign up</button>
+            </div>
+        </div>
     </body>
 </html>
